--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,11 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
