--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="MERN Application where all your streams of thought converge."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
