twitter social sharing meta tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,16 +15,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <meta
-      property="og:image"
-      content="https://images.unsplash.com/photo-1524009901480-a6fa1c0c8ab5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"
-    />
-    <meta
-      property="og:image:type"
-      content="https://images.unsplash.com/photo-1524009901480-a6fa1c0c8ab5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"
-    />
-    <meta property="og:image:width" content="1024" />
-    <meta property="og:image:height" content="1024" />
+    <meta property="og:title" content="Estuary">
+    <meta property="og:description" content="Where all your streams of thought converge.">
+    <meta property="og:image" content="%PUBLIC_URL%/estuary.jpeg">
+    <meta property="og:url" content="https://www.estuaryapp.com/">
+    <meta name="twitter:title" content="Estuary ">
+    <meta name="twitter:description" content=" Where all your streams of thought converge.">
+    <meta name="twitter:image" content=" %PUBLIC_URL%/estuary.jpeg">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
