header working on mobile

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,15 +15,25 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <meta property="og:title" content="Estuary">
-    <meta property="og:description" content="Where all your streams of thought converge.">
-    <meta property="og:image" content="%PUBLIC_URL%/estuary.jpeg">
-    <meta property="og:url" content="https://www.estuaryapp.com/">
-    <meta name="twitter:title" content="Estuary ">
-    <meta name="twitter:description" content=" Where all your streams of thought converge.">
-    <meta name="twitter:image" content="%PUBLIC_URL%/estuary.jpeg">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Estuary" />
+    <meta
+      property="og:description"
+      content="Where all your streams of thought converge."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/estuary.jpeg" />
+    <meta property="og:url" content="https://www.estuaryapp.com/" />
+    <meta name="twitter:title" content="Estuary " />
+    <meta
+      name="twitter:description"
+      content=" Where all your streams of thought converge."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/estuary.jpeg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
+    />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
